--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                         <div class="item item-none">
                             <div class="wrap-slide-two">
-                                <img src="/image/slide2.png" alt="">
+                                <img src="image/slide2.png" alt="">
                                 <div class="wrap-text-slide">
                                     <p class="slide-text">до</p>
                                     <p class="slide-text">после</p>
@@ -47,7 +47,7 @@
                         </div>
 
                         <div class="item item-none">
-                            <img class="slide3" src="/image/slide3.png" alt="">
+                            <img class="slide3" src="image/slide3.png" alt="">
                         </div>
 
                     </div>
@@ -180,13 +180,13 @@
                 <h3 class="section-manual-title">ИНСТРУКЦИЯ ПО УСТАНОВКЕ <span>BRIGHTSMILE</span></h3>
             </div>
 
-            <div> <img class="image" src="/image/instrmob2.png" alt=""></div>
+            <div> <img class="image" src="image/instrmob2.png" alt=""></div>
 
 
             <div class="wrapper">
                 <div class="wrap-section-manual">
                     <div class="section-instuction-block">
-                        <img class="param-logo" src="/image/mlogo1.png" alt="виниры в стакане">
+                        <img class="param-logo" src="image/mlogo1.png" alt="виниры в стакане">
                         <div class="block-wrap">
                             <span class="block-number">1</span>
                             <p class="block-text">
@@ -196,7 +196,7 @@
                     </div>
 
                     <div class="section-instuction-block">
-                        <img class="param-logo" src="/image/mlogo2.png" alt="виниры в стакане">
+                        <img class="param-logo" src="image/mlogo2.png" alt="виниры в стакане">
                         <div class="block-wrap">
                             <span class="block-number">2</span>
                             <p class="block-text">
@@ -208,7 +208,7 @@
 
 
                     <div class="section-instuction-block">
-                        <img class="param-logo" src="/image/mlogo3.png" alt="виниры в стакане">
+                        <img class="param-logo" src="image/mlogo3.png" alt="виниры в стакане">
                         <div class="block-wrap">
                             <span class="block-number">3</span>
                             <p class="block-text">
@@ -220,7 +220,7 @@
 
 
                     <div class="section-instuction-block last-block">
-                        <img class="param-logo" src="/image/mlogo4.png" alt="виниры в стакане">
+                        <img class="param-logo" src="image/mlogo4.png" alt="виниры в стакане">
                         <div class="block-wrap">
                             <span class="block-number">4</span>
                             <p class="block-text">
